# xtask-wasm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
.cargo/: config
.github/workflows/: main.yml  pr.yml  rust.yml
demo-webapp/xtask/: Cargo.toml
demo-webapp/xtask/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/demo-webapp/: Cargo.toml
examples/demo/demo-webapp/src/: app.rs
examples/demo/demo-webapp/static/: index.html
examples/demo/webapp/: Cargo.toml
examples/demo/webapp/assets/: canvas.scss  index.html
examples/demo/webapp/assets/subdirectory/: test4.scss  test5.sass
examples/demo/webapp/examples/: run_example.rs
examples/demo/webapp/src/: app.rs  lib.rs
examples/demo/webapp/static/: index.html  test2.sass
examples/demo/webapp/static/subdirectory/: _test6.sass
examples/demo/xtask/: Cargo.toml
examples/demo/xtask/src/: main.rs
examples/frontend/: Cargo.toml
examples/frontend/src/: lib.rs
examples/frontend/xtask/: Cargo.toml
examples/frontend/xtask/src/: main.rs
src/: build.rs  cfg.rs  dev_server.rs  dist.rs  lib.rs  pwa.rs  sass.rs  wasm_opt.rs  watch.rs
xtask-wasm-run-example/: Cargo.toml
xtask-wasm-run-example/src/: lib.rs
