[package]
name = "xtask-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extend your project workflow with custom xtask command for WASM"
homepage = "https://github.com/rustminded/xtask-wasm"
repository = "https://github.com/rustminded/xtask-wasm"
documentation = "https://docs.rs/xtask-wasm"
# Following security advisory since we use `std::fs::remove_dir_all` in `src/dist.rs`
# (see [cve-2022-21658](https://groups.google.com/g/rustlang-security-announcements/c/R1fZFDhnJVQ))
rust-version = "1.58.1"
readme = "README.md"
categories = ["development-tools::build_utils"]
keywords = ["wasm", "cli"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[features]
wasm-opt = ["binary-install", "platforms"]
run-example = ["xtask-wasm-run-example", "console_error_panic_hook", "wasm-bindgen", "env_logger"]

[dependencies]
binary-install = { version = "0.0.2", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
env_logger = { version = "0.9.0", optional = true }
fs_extra = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
platforms = { version = "2.0.0", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true }
wasm-bindgen-cli-support = "0.2.68"
xtask-wasm-run-example = { version = "0.1.0", optional = true }
xtask-watch = { version = "0.1.1" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.112"

[workspace]
members = ["xtask-wasm-run-example"]
