[package]
name = "xtask-wasm"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Customizable subcommands to build your Wasm projects using xtask."
homepage = "https://github.com/rustminded/xtask-wasm"
repository = "https://github.com/rustminded/xtask-wasm"
documentation = "https://docs.rs/xtask-wasm"
rust-version = "1.71"
readme = "README.md"
categories = ["development-tools::build-utils"]
keywords = ["wasm", "cli"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[features]
run-example = ["xtask-wasm-run-example", "console_error_panic_hook", "wasm-bindgen", "env_logger"]
sass = ["sass-rs", "walkdir"]
wasm-opt = ["binary-install"]

[dependencies]
xtask-wasm-run-example = { version = "0.3.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
binary-install = { version = "0.4.1", optional = true }
env_logger = { version = "0.11.6", optional = true }
fs_extra = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
sass-rs = { version = "0.2.2", optional = true }
walkdir = { version = "2.3.2", optional = true }
# NOTE: we don't depend on this crate but we need to activate this feature otherwise it's super slow
walrus = { version = "0.23.0", features = ["parallel"] }
wasm-bindgen-cli-support = "0.2.100"
xtask-watch = "0.2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.112"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["xtask-wasm-run-example"]
resolver = "2"
