[package]
name = "xtask-wasm-run-example"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "crate for the `run-example` feature of xtask-wasm"
include = ["src/**/*.rs", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
