[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-screensaver-fractal-clock = "0.1"
egui = { version = "0.34", default-features = false }
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "web_screen_reader", "accesskit"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[dev-dependencies]
egui-screensaver-mystify = "0.1"
xtask-wasm = { path = "../../..", features = ["run-example", "sass"] }
