[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
clap = { version = "3.0", features = ["derive"] }
xtask-wasm = { path = "../../../", version = "0.0.0" }
