[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "0.3", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
xtask-wasm = { path = "../../../", version = "0.0.0", features = ["wasm-opt"]}
