[package]
name = "xtask"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.14"
env_logger = "0.9"
log = "0.4"
structopt = { version = "0.3", default-features = false }
wasm-bindgen-cli-support = "0.2.68"
xtask-wasm = { path = "../../../" }
